--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nconf": "^0.9.1",
-    "restify": "^6.3.1"
+    "nconf": "0.11.3",
+    "restify": "8.5.1"
   }
 }
